<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>

    <TextView
        android:id="@+id/select_players_text_voting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/select_players_text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/player_button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_5"/>

        <Button
            android:id="@+id/player_button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_6"/>

        <Button
            android:id="@+id/player_button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_7"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/player_button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_8"/>

        <Button
            android:id="@+id/player_button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_9"/>

        <Button
            android:id="@+id/player_button_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_10"/>

    </LinearLayout>

    <TextView
        android:id="@+id/player_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/result_image"
        android:layout_width="145sp"
        android:layout_height="94sp"
        android:src="@drawable/blank"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ja_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ja"/>

            <Button
                android:id="@+id/nein_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nein"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/vote_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/total_votes"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/vote_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_again"/>


    </LinearLayout>


</LinearLayout>